<resources>
    <string name="app_name">Space</string>
    <string name="home">home</string>
    <string name="map">map</string>
    <string name="show_image">Show Image</string>
    <string name="press_to_back">Нажмите кнопку, \n чтобы вернуться назад</string>
    <string name="press_to_share">Нажмите кнопку,\nчтобы поделиться</string>
    <string name="use_gestures">Используйте жесты,\nчтобы приблизить/отдалить</string>
    <string name="description_back">Pressing this button will navigate you back</string>
    <string name="description_share">Pressing this button you can share the image</string>
    <string name="description_gestures">You can use gestures to scale and move the image</string>
    <string name="sharing_subject">Sharing image from NASA API!</string>
    <string name="sharing_text">Sending image from my Space application!</string>
    <string name="sharing_via">Sharing via</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="marker_name">Marker name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pull_down_to_hide">Pull down to hide</string>
    <string name="longitude">Longitude:</string>
    <string name="width">Width:</string>
    <string name="button_to_delete_marker">Button to delete marker</string>
    <string name="button_for_changing_landscape">Button for changing landscape</string>
</resources>