<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_transparent">

    <ImageView
        android:id="@+id/ic_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="56dp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_back" />

    <TextView
        android:id="@+id/tv_press_to_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/press_to_back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@+id/ic_arrow_back"
        app:layout_constraintTop_toBottomOf="@+id/ic_arrow_back" />

    <ImageView
        android:id="@+id/ic_arrow_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginEnd="80dp"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_share" />

    <TextView
        android:id="@+id/tv_press_to_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/press_to_share"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_arrow_share"
        app:layout_constraintStart_toStartOf="@+id/ic_arrow_share"
        app:layout_constraintTop_toBottomOf="@+id/ic_arrow_back" />

    <ImageView
        android:id="@+id/ic_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gestures"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_gestures" />

    <TextView
        android:id="@+id/tv_use_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/use_gestures"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/ic_gestures"
        app:layout_constraintStart_toStartOf="@+id/ic_gestures"
        app:layout_constraintTop_toBottomOf="@+id/ic_gestures" />

</androidx.constraintlayout.widget.ConstraintLayout>