<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/tv_marker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Marker name" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/longitude"
        app:layout_constraintStart_toStartOf="@+id/tv_marker_name"
        app:layout_constraintTop_toBottomOf="@id/tv_marker_name" />

    <TextView
        android:id="@+id/tv_longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="999999999999"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toTopOf="@+id/tv_longitude" />

    <TextView
        android:id="@+id/tv_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
        android:text="@string/width" />

    <TextView
        android:id="@+id/tv_width_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="999999999999"
        app:layout_constraintStart_toStartOf="@+id/tv_longitude_value"
        app:layout_constraintTop_toTopOf="@+id/tv_width" />

    <ImageView
        android:id="@+id/btn_delete_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_marker_delete"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_to_delete_marker" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_width" />

</androidx.constraintlayout.widget.ConstraintLayout>