<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_marker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:textColorHint="?attr/colorOnSecondary"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_marker_name"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:hint="@string/marker_name"
                android:textColor="?attr/colorPrimaryVariant"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:background="?android:attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintEnd_toEndOf="@+id/til_marker_name"
            app:layout_constraintStart_toStartOf="@+id/til_marker_name"
            app:layout_constraintTop_toBottomOf="@+id/til_marker_name" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Theme.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/cancel"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Theme.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/save"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>